--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@percy/cli": "^1.23.0",
+    "@percy/selenium-webdriver": "^1.0.2"
   }
 }
