--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@testing-library/jest-dom": "^4.1.0",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^12.7.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -15,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "percy": "cross-env PERCY_TOKEN=YOURTOKEN percy exec -- npm run test"
   },
   "eslintConfig": {
     "extends": [
@@ -37,6 +38,8 @@
   },
   "devDependencies": {
     "@percy/cli": "^1.23.0",
-    "@percy/selenium-webdriver": "^1.0.2"
+    "@percy/selenium-webdriver": "^1.0.2",
+    "cross-env": "^7.0.3",
+    "selenium-webdriver": "^4.9.0"
   }
 }
